--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -9,11 +9,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/group_icon_description"
-            android:src="@android:drawable/ic_media_pause"/>
+        <GridLayout
+            android:id="@+id/profile_ds"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:background="@drawable/circle">
+            <TextView
+                android:id="@+id/initials"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/initials"
+                android:textColor="@color/white"
+                android:textSize="42sp"
+                android:textAllCaps="true"/>
+        </GridLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -21,26 +32,26 @@
             android:orientation="vertical"
             android:padding="2dp">
             <TextView
-                android:id="@+id/group_name"
+                android:id="@+id/friend_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/group_name"
+                android:text="@string/friend_name"
                 android:textColor="@color/blue_600"
                 android:textSize="22sp"
                 android:textAlignment="textStart"/>
             <TextView
-                android:id="@+id/group_description"
+                android:id="@+id/friend_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/group_description"
+                android:text="@string/friend_description"
                 android:textAlignment="textStart"/>
         </LinearLayout>
         <TextView
-            android:id="@+id/num_users"
+            android:id="@+id/friend_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="1dp"
-            android:text="@string/available_users"/>
+            android:text="@string/available_friend"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
