--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -2,17 +2,17 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="@dimen/card_height"
     android:layout_margin="2dp"
     android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/card_padding">
         <GridLayout
-            android:id="@+id/profile_ds"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:background="@drawable/circle">
             <TextView
@@ -22,36 +22,36 @@
                 android:layout_gravity="center"
                 android:text="@string/initials"
                 android:textColor="@color/white"
-                android:textSize="42sp"
+                android:textSize="40sp"
                 android:textAllCaps="true"/>
         </GridLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="2dp">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/friend_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/friend_name"
                 android:textColor="@color/blue_600"
-                android:textSize="22sp"
-                android:textAlignment="textStart"/>
+                android:textSize="18sp"
+                android:textAlignment="textStart"
+                android:layout_marginStart="10dp"/>
             <TextView
                 android:id="@+id/friend_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/friend_description"
-                android:textAlignment="textStart"/>
+                android:textAlignment="textStart"
+                android:layout_marginStart="15dp"/>
         </LinearLayout>
         <TextView
             android:id="@+id/friend_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="1dp"
             android:text="@string/available_friend"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
