--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -2,45 +2,56 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="@dimen/card_height"
     android:layout_margin="2dp"
     android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/group_icon_description"
-            android:src="@android:drawable/ic_media_pause"/>
+        android:orientation="horizontal"
+        android:padding="@dimen/card_padding">
+        <GridLayout
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/circle">
+            <TextView
+                android:id="@+id/group_initials"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/group_initials"
+                android:textColor="@color/white"
+                android:textSize="40sp"
+                android:textAllCaps="true"/>
+        </GridLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="2dp">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/group_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/group_name"
                 android:textColor="@color/blue_600"
-                android:textSize="22sp"
-                android:textAlignment="textStart"/>
+                android:textSize="18sp"
+                android:textAlignment="textStart"
+                android:layout_marginStart="10dp"/>
             <TextView
                 android:id="@+id/group_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/group_description"
-                android:textAlignment="textStart"/>
+                android:textAlignment="textStart"
+                android:layout_marginStart="15dp"/>
         </LinearLayout>
         <TextView
             android:id="@+id/num_users"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:layout_margin="1dp"
             android:text="@string/available_users"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
