--- a/app/src/main/res/layout/content_create_group.xml
+++ b/app/src/main/res/layout/content_create_group.xml
@@ -21,6 +21,7 @@
             android:src="@drawable/ic_group" />
 
         <EditText
+            android:id="@+id/chosen_group_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
