--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/card_height"
-    android:layout_margin="2dp"
+    android:layout_margin="1dp"
     android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,13 +22,14 @@
                 android:layout_gravity="center"
                 android:text="@string/initials"
                 android:textColor="@color/white"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:textAllCaps="true"/>
         </GridLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/friend_name"
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/friend_description"
                 android:textAlignment="textStart"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="10dp"/>
         </LinearLayout>
         <TextView
             android:id="@+id/friend_status"
