--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.FriendsActivity">
+    tools:context=".activity.FriendsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
