--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="draugvar.smartteamtracking.activities.GroupActivity">
+    tools:context="draugvar.smartteamtracking.activity.GroupActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
