--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="draugvar.smartteamtracking.activities.LoginActivity">
+    tools:context="draugvar.smartteamtracking.activity.LoginActivity">
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
