--- a/app/src/main/res/layout/content_create_group.xml
+++ b/app/src/main/res/layout/content_create_group.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CreateGroupActivity"
+    tools:context=".activity.CreateGroupActivity"
     tools:showIn="@layout/activity_create_group">
 
     <LinearLayout
