--- a/app/src/main/res/layout/content_group.xml
+++ b/app/src/main/res/layout/content_group.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="draugvar.smartteamtracking.activities.GroupActivity"
+    tools:context="draugvar.smartteamtracking.activity.GroupActivity"
     tools:showIn="@layout/activity_group"
     android:baselineAligned="false">
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
