--- a/app/src/main/res/menu/menu_friends.xml
+++ b/app/src/main/res/menu/menu_friends.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.FriendsActivity">
+    tools:context=".activity.FriendsActivity">
     <item
         android:id="@+id/accept_friends"
         android:orderInCategory="100"
