--- a/app/src/main/res/layout/content_friends.xml
+++ b/app/src/main/res/layout/content_friends.xml
@@ -18,7 +18,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_people"/>
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/edit_text_friend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
