--- a/app/src/main/res/layout/pending_group_item.xml
+++ b/app/src/main/res/layout/pending_group_item.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@color/yellow_50"
         android:padding="@dimen/card_padding">
         <GridLayout
             android:layout_width="60dp"
@@ -46,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/group_description"
+                android:textColor="@color/amber_400"
                 android:textAlignment="textStart"
                 android:layout_marginStart="10dp"/>
         </LinearLayout>
